--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11",
     "@hookform/resolvers": "^2.3.0",
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "faunadb": "^4.1.3",
     "framer-motion": "^4",
     "multer": "^1.4.2",
